--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" />
+    <!-- <script
+      type="text/javascript"
+      src="
+    https://maps.googleapis.com/maps/api/js?key=AIzaSyDIJE1GemZ63beL0kuctNAE2AaNW676qE0&libraries=visualization"></script> -->
   </head>
   <body>
     <app-root></app-root>
