--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,7 @@
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet" />
-    <!-- <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css" /> -->
+    <link rel="stylesheet" href="https://fonts.xz.style/serve/inter.css" />
   </head>
   <body class="mat-typography">
     <app-root></app-root>
